--- a/ui/package.json
+++ b/ui/package.json
@@ -17,16 +17,10 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^7.0.2",
-    "@typescript-eslint/parser": "^2.6.0",
     "classnames": "^2.2.6",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-prettier": "^3.1.2",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-json-view": "^1.19.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.0",
     "tinycolor2": "^1.4.1",
@@ -59,5 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:7575/"
+  "proxy": "http://localhost:7575"
 }
