--- a/daml.yaml
+++ b/daml.yaml
@@ -1,11 +1,11 @@
-sdk-version: 1.0.1
+sdk-version: 1.2.0
 name: asset-servicing
 source: daml
 parties:
   - Alice
   - Bob
 version: 0.0.1
-#init-script: Init:init
+start-navigator: false
 sandbox-options:
   - --ledgerid=asset-servicing
   - -w
