--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DAML App Template",
-  "name": "DAML App Template",
+  "short_name": "Asset Servicing Portal",
+  "name": "Asset Servicing Portal",
   "icons": [
     {
       "src": "favicon.ico",
