--- a/ui/package.json
+++ b/ui/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@daml.js/asset-servicing-0.0.1": "file:../daml.js/asset-servicing-0.0.1",
-    "@daml/ledger": "1.4.0",
-    "@daml/react": "1.4.0",
-    "@daml/types": "1.4.0",
+    "@daml/ledger": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
+    "@daml/react": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
+    "@daml/types": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
