Add asset distribution

--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Asset Servicing Portal",
-  "name": "Asset Servicing Portal",
+  "short_name": "Digital Securities Depository",
+  "name": "Digital Securities Depository",
   "icons": [
     {
       "src": "favicon.ico",
