--- a/ui/package.json
+++ b/ui/package.json
@@ -7,10 +7,13 @@
     "@daml/ledger": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
     "@daml/react": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
     "@daml/types": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
+    "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.3.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
