--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.3.0",
     "classnames": "^2.2.6",
