--- a/daml.yaml
+++ b/daml.yaml
@@ -1,16 +1,19 @@
-sdk-version: 1.7.0-snapshot.20201027.5530.0.bdbf8977
-name: asset-servicing
+sdk-version: 1.7.0
+name: dsp
 source: daml
-parties:
-  - Alice
-  - Bob
 version: 0.0.1
-start-navigator: false
-init-script: Init:init
-sandbox-options:
-  - --ledgerid=asset-servicing
-  - -w
 dependencies:
   - daml-prim
   - daml-stdlib
   - daml-script
+start-navigator: false
+init-script: Init:init
+sandbox-options:
+  - --ledgerid=dsp
+  - -w
+script-options:
+  - --input-file=parties.json
+codegen:
+  js:
+    output-directory: daml.js
+    npm-scope: daml.js
