--- a/ui/package.json
+++ b/ui/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "asset-servicing-ui",
+  "name": "dsp-ui",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@daml.js/asset-servicing-0.0.1": "file:../daml.js/asset-servicing-0.0.1",
-    "@daml/ledger": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
-    "@daml/react": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
-    "@daml/types": "1.7.0-snapshot.20201027.5530.0.bdbf8977",
+    "@daml.js/dsp-0.0.1": "file:../daml.js/dsp-0.0.1",
+    "@daml/ledger": "1.7.0",
+    "@daml/react": "1.7.0",
+    "@daml/types": "1.7.0",
     "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
